--- a/index.html
+++ b/index.html
@@ -17,49 +17,8 @@
  </head>
  <body>
 
-      <div class="frame">
-   <h1> Barcelone</h1>
-   <h2> "Plus belle ville du monde"</h2>
-   <p>Une riche culture catalane!</p> 
-
-   <a class="btn btn-success" href="https://www.barcelonaturisme.com/wv3/fr/" target="_blank"> office du tourisme de Barcelone </a>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Open for a surprise
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Bienvenue à Barcelone</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        Bordeaux >>> Barcelone :)
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-   <br>
-   <br>
-
-   <img class="avatar" src="image/imagebarcelone.jpg" alt="La ville de Barcelone" width="444">
-   <br>
-   <br>
-
- </div>
-
-    <div class="navbar"> 
-      <img src="images/logobarcelone.png" witdh= "20" height="80" alt="Ville de Barcelone">
+   <div class="my-navbar"> 
+      <img src="images/logobarcelone.png" witdh= "80" height="200" alt="Ville de Barcelone">
       <div class="menu">
       </div>
          <a href="" class="item">La culture catalane</a>
@@ -68,7 +27,16 @@
 
    </div>
 
-   <br>
+      <div class="frame">
+
+   <h1> Barcelone</h1>
+   <h2> "La ville du soleil"</h2>
+   <p>Une riche culture catalane !</p> 
+
+   <a class="btn btn-success" href="https://www.barcelonaturisme.com/wv3/fr/" target="_blank"> Office du tourisme de Barcelone </a>
+
+ </div>
+
    <br>
 
    <h3>Une ville avec un riche patrimoine culturel : </h3>
@@ -81,33 +49,79 @@
 
    <h3> Galerie</h3>
 
-   <img class="img-galery" witdh= "100" height="333" src="images/sagradafamilia.jpg" alt="">
-   <img class="img-galery" witdh= "100" height="333" src="images/portbarcelone.jpg" alt="">
-   <img class="img-galery" witdh= "100" height="333" src="images/parc.jpg" alt="">
+   <img class="img-galery" witdh= "80" height="310" src="images/sagradafamilia.jpg" alt="">
+   <img class="img-galery" witdh= "80" height="310" src="images/portbarcelone.jpg" alt="">
+   <img class="img-galery" witdh= "80" height="310" src="images/parc.jpg" alt="">
 
-   <br>
    <br>
 
    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95777.33906317175!2d2.078727866268998!3d41.3948975937079!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2f8f996f319%3A0x874aa50cbfd49132!2sBarcelona%20Turisme!5e0!3m2!1sfr!2sfr!4v1623241687042!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 
-   <iframe width="790" height="444" src="https://https://www.youtube.com/watch?v=aL4PLre3MpA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-   <br>
    <br>
 
-   <div class="drapeau">
-      <div class="red"></div>
-      <div class="yellow"></div>
-      <div class="red"></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9XlKhpx3RE0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   <br>
    </div>
-
-   <br>
-   <br>
-
 
   </div>
 
 <script src="https://www.youtube.com/watch?v=QVGWxNl-2r8" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+   <br>
+
+<!-- Begin Mailchimp Signup Form -->
+<link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+  #mc_embed_signup{background:#FFEAD9; clear:left; font:14px Helvetica,Arial,sans-serif; }
+  /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://gmail.us6.list-manage.com/subscribe/post?u=ca659d42c2e8629978e3ebb59&amp;id=5be5638795" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+  <h2>Infolettre de Barcelone !</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+  <label for="mce-EMAIL">Adresse mail  <span class="asterisk">*</span>
+</label>
+  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+  <label for="mce-FNAME">Prénom </label>
+  <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+</div>
+<div class="mc-field-group">
+  <label for="mce-LNAME">Nom </label>
+  <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+</div>
+<div class="mc-field-group size1of2">
+  <label for="mce-BIRTHDAY-month">Date de naissance </label>
+  <div class="datefield">
+    <span class="subfield monthfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="MM" size="2" maxlength="2" name="BIRTHDAY[month]" id="mce-BIRTHDAY-month"></span> / 
+    <span class="subfield dayfield"><input class="birthday " type="text" pattern="[0-9]*" value="" placeholder="DD" size="2" maxlength="2" name="BIRTHDAY[day]" id="mce-BIRTHDAY-day"></span> 
+    <span class="small-meta nowrap">( mm / dd )</span>
+  </div>
+</div>  <div id="mce-responses" class="clear">
+    <div class="response" id="mce-error-response" style="display:none"></div>
+    <div class="response" id="mce-success-response" style="display:none"></div>
+  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ca659d42c2e8629978e3ebb59_5be5638795" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+
+   <br>
+
+   <div class="navbarbas"> 
+      <img src="images/logobarcelone.png" witdh= "20" height="80" alt="Ville de Barcelone">
+      <div class="menu">
+      </div>
+         <a href="" class="item">La Région</a>
+         <a href="" class="item">Mentions Légales</a>
+         <a href="" class="item">Contact</a>
 
   </body>
 </html>
